Fixed sketch library handling