@@ -57,17 +57,30 @@ public class ChildWrapper
 	 */
 	
 
-	public ChildWrapper(int w, int h, String classPath, String className, String name, boolean billboard)
+	public ChildWrapper(int w, int h, String classPath, URL[] libraryULS, String className, String name, boolean billboard)
 	{	
 		m_Width 			= w;
 		m_Height 			= h;
 		m_Name 				= name;
 		m_RenderBillboard 	= billboard;
 		
+	    File dir1 = new File (".");
+	    try 
+	    {
+	      System.out.println ("Current dir : " + dir1.getCanonicalPath());
+	    }
+	    catch(Exception e)
+	    {
+	    	 
+	    }
+		
 		m_Blending_Source 		= GL.GL_SRC_ALPHA;
 		m_Blending_Destination 	= GL.GL_ONE_MINUS_SRC_ALPHA;
 		
-		m_Child = LoadSketch(classPath, className);
+		//if(className!="source_particles")
+			m_Child = LoadSketch(classPath, className, libraryULS);
+		//else
+		//	m_Child = new source_particles();
 	}
 		
 	/**
@@ -84,14 +97,16 @@ public class ChildWrapper
 				if( m_RenderToTexture == null)
 				{
 					m_RenderToTexture = new RenderSketchToTexture(m_Width, m_Height, m_Child);
-					System.out.println(m_Name);
 				}
 				
 				m_RenderToTexture.draw(i);				
 			}
 			else
 			{
-			//	m_Child.draw();
+				((PGraphicsOpenGL)m_Child.g).gl.glClear(GL.GL_DEPTH_BUFFER_BIT);
+				((PGraphicsOpenGL)m_Child.g).pushMatrix();
+				m_Child.draw();
+				((PGraphicsOpenGL)m_Child.g).popMatrix();
 			}
 		}
 		else
@@ -101,6 +116,10 @@ public class ChildWrapper
 		}
 	}
 	
+	/*
+	 * This worked but doesn't help much for the plugin handling: "-Djava.ext.dirs=C:\libraries"
+	 */
+	
 	/**
 	 * Loads a sketch from disk
 	 * @param classPath
@@ -108,7 +127,7 @@ public class ChildWrapper
 	 * @return
 	 */
 	
-	private PApplet LoadSketch(String classPath, String className)
+	private PApplet LoadSketch(String classPath, String className, URL[] libraryURLS)
     {   
         File oooClassPath; // = new File(classPath + "//" + className + ".jar");
         
@@ -116,10 +135,19 @@ public class ChildWrapper
         	oooClassPath = new File(classPath); // Mac
         else 
         	oooClassPath = new File(classPath + "//" + className + ".jar"); // Windows
+
+        URL[] toUse = new URL[1 + libraryURLS.length];
         
         try
-        {
-        	URLClassLoader cl = new URLClassLoader( new URL[] {oooClassPath.toURI().toURL()} );
+        { 
+        	for(int i = 0; i<libraryURLS.length; i++ )
+            {
+        		toUse[i] = libraryURLS[i];
+            }
+             
+            toUse[libraryURLS.length] = oooClassPath.toURI().toURL();
+             
+        	URLClassLoader cl = new URLClassLoader( toUse, ClassLoader.getSystemClassLoader() );
 
             return (PApplet)Class.forName(className, true, cl).newInstance();
         } 
